FIX extra space in galleries

--- a/source/sass/media/_galleries.scss
+++ b/source/sass/media/_galleries.scss
@@ -1,5 +1,5 @@
 .gallery {
-	margin-bottom: 1.5em;
+	/* margin-bottom: 1.5em; */
 	position: relative;
 	padding-bottom:68%;
 }
